--- a/app/src/main/res/layout/activity_github.xml
+++ b/app/src/main/res/layout/activity_github.xml
@@ -19,20 +19,20 @@
             android:layout_height="wrap_content"
             app:tabGravity="fill"
             app:tabMode="fixed"
-            app:tabTextColor="#000000"
+            app:tabTextColor="#FF000000"
             app:tabSelectedTextColor="@color/colorPrimary"
             app:tabIndicatorColor="@color/colorPrimary">
 
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/tabGithub"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tab_github" />
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/tabLike"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tab_like" />
+<!--            <com.google.android.material.tabs.TabItem-->
+<!--                android:id="@+id/tabGithub"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/tab_github" />-->
+<!--            <com.google.android.material.tabs.TabItem-->
+<!--                android:id="@+id/tabLike"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/tab_like" />-->
         </com.google.android.material.tabs.TabLayout>
 
     </androidx.viewpager.widget.ViewPager>
