ADD 예약 페이지 작업중

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="black">#000000</color>
+    <color name="brownish_grey">#777777</color>
+    <color name="very_light_pink">#e8e8e8</color>
+    <color name="deep_sky_blue">#0078ff</color>
+    <color name="very_light_pink_two">#cccccc</color>
+    <color name="very_light_pink_three">#f1f1f1</color>
+    <color name="black_two">#222222</color>
+    <color name="white">#ffffff</color>
+    <color name="brown_grey">#aaaaaa</color>
+    <color name="very_light_blue">#eceef1</color>
 </resources>
