--- a/app/src/main/res/layout/item_room_reservation.xml
+++ b/app/src/main/res/layout/item_room_reservation.xml
@@ -11,7 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <TextView
             android:id="@+id/tvRoomName"
             style="@style/TextStyle"
@@ -41,6 +41,16 @@
             app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/ic_question"/>
 
-
+        <com.ykyh.githubsearch.presentation.room.ReservationView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvLocation"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
