--- a/app/src/main/res/layout/item_room_reservation.xml
+++ b/app/src/main/res/layout/item_room_reservation.xml
@@ -42,6 +42,7 @@
             android:background="@drawable/ic_question"/>
 
         <com.ykyh.githubsearch.presentation.room.ReservationView
+            android:id="@+id/reservationView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="11dp"
