ADD 예약 현황 노출 로직 작업중...

--- a/app/src/main/res/layout/view_reservation.xml
+++ b/app/src/main/res/layout/view_reservation.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <FrameLayout
         android:id="@+id/flNow"
         android:layout_width="wrap_content"
@@ -228,4 +228,6 @@
         app:layout_constraintTop_toTopOf="@id/tvTime9"
         app:layout_constraintBottom_toBottomOf="@id/tvTime9"
         android:text="18"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
